pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__any_packet.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 3
inner:
  header:
    offset: 0
    length: 2
    inner:
      format: Legacy
      ctb:
        offset: 0
        length: 1
        inner:
          type_id: 13
      length:
        offset: 1
        length: 1
        inner:
          encoding: Full
          length: 23
  body:
    offset: 2
    length: 1
    inner:
      user_id:
        offset: 2
        length: 1
        inner: John <john@example.com>
