pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__eddsa_legacy.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 4
inner:
  curve_oid:
    offset: 0
    length: 2
    inner:
      name: Ed25519Legacy
      length:
        offset: 0
        length: 1
        inner: 9
      oid:
        offset: 1
        length: 1
        inner:
          - 43
          - 6
          - 1
          - 4
          - 1
          - 218
          - 71
          - 15
          - 1
  q:
    offset: 2
    length: 2
    inner:
      length:
        offset: 2
        length: 1
        inner: 17
      integers:
        offset: 3
        length: 1
        inner:
          - 1
          - 2
          - 3
