pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__header_openpgp.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 2
inner:
  format: OpenPGP
  ctb:
    offset: 0
    length: 1
    inner:
      type_id: 60
  length:
    offset: 1
    length: 1
    inner:
      encoding: Full
      length: 0
