pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__legacy_length_indeterminate.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  encoding: Indeterminate
