pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__legecy_ctb.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  type_id: 0
