pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__mpi.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 2
inner:
  length:
    offset: 0
    length: 1
    inner: 17
  integers:
    offset: 1
    length: 1
    inner:
      - 1
      - 2
      - 3
